--- a/static/style.css
+++ b/static/style.css
@@ -71,8 +71,119 @@ textarea {
 
 .results h1{
     text-align:center;
-	font-size: 35px;
-	background-color:rgb(3, 21, 100);  
+	font-size: 40px; 
 	height:52px; 
-    width:380px;
+    width:450px;
+	left: 40%
 }
+.results h2{
+	color: rgb(28, 92, 15);
+}
+
+.results ul li{
+	color: rgb(105, 49, 4);
+	font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+}
+
+.footerContainer h2{
+	background-color: none;
+}
+.footerContainer p{
+
+	text-align:center;
+	color: #600377 ;
+}
+
+#wrapper {
+	position: absolute;
+	left: 80%;
+	top: 65%;
+	perspective: 1500px;
+  }
+  
+  .box-area {
+	position: relative;
+	transform-style: preserve-3d;
+	animation-name: rotate;
+	animation-duration: 30s;
+	animation-timing-function: linear;
+	animation-iteration-count: infinite;
+  }
+  
+  @keyframes rotate {
+	0% {
+	  transform: rotate3d(0, 0, 0, 0);
+	}
+	100% {
+	  transform: rotate3d(0, 1, 0, 360deg);
+	  ;
+	}
+  }
+  
+  .box {
+	position: absolute;
+	width: 300px;
+	height: 300px;
+	border: 2px solid #262626;
+  }
+  
+  #box-front {
+	transform: translateX(-200px) translateY(-200px) translateZ(200px);
+	background: rgba(255, 16, 107, 0.5);
+  }
+  
+  #box-back {
+	transform: translateX(-200px) translateY(-200px) translateZ(-200px);
+	background: rgba(1, 251, 236, 0.5);
+  }
+  
+  #box-right {
+	transform: translateY(-200px) rotateY(90deg);
+	background: rgba(4, 255, 116, 0.5);
+  }
+  
+  #box-left {
+	transform: translateY(-200px) translateX(-400px) rotateY(90deg);
+	background: rgba(216, 255, 0, 0.5);
+  }
+  
+  #box-top {
+	transform: translateX(-200px) translateY(-400px) rotateX(90deg);
+	background: rgba(0, 6, 246, 0.5);
+  }
+  
+  #box-bottom {
+	transform: translateX(-200px) rotateX(90deg);
+	background: rgba(255, 30, 0, 0.5);
+  }
+  
+  .box-area {
+	transform: rotateX(90deg) rotateY(90deg);
+  }
+
+  .spamwords h1{
+	text-align:center;
+	color: rgb(28, 92, 15);
+  }
+
+  .spamwords h2{
+	text-align:center;
+	color: rgb(28, 92, 15);
+  }
+
+  .spamwords p{
+	color:rgb(3, 27, 133);
+	font-size: 20px;
+  }
+
+  .spamwords ul li{
+	color: rgb(105, 49, 4);
+	font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px;
+	font-weight: bold;
+  }
+
+  .triggerwords a{
+	font-size: 40px;
+  }
